# ffmpeg-black-split

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml
docs/: ffmpeg_black_split.html  index.html  search.js
ffmpeg_black_split/: __init__.py  __main__.py  _black_split.py
src/ffmpeg_black_split/: __init__.py  _black_split.py
test/: test.py
tests/: create_test_video.sh  test_ffmpeg_black_split.py
