[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project]
name = "ffmpeg_black_split"
version = "0.6.0"
description = "Split a video by black frames"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    {name = "Werner Robitza", email = "werner.robitza@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "tqdm>=4.38.0",
    "ffmpeg-progress-yield",
]

[project.urls]
Homepage = "https://github.com/slhck/ffmpeg-black-split"
Repository = "https://github.com/slhck/ffmpeg-black-split"

[project.scripts]
ffmpeg-black-split = "ffmpeg_black_split.__main__:main"

[dependency-groups]
dev = [
    "pytest >=8.1.1,<9",
    "ruff>=0.12.11",
    "mypy",
    "pdoc>=15.0.4",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
exclude = ["build"]
namespace_packages = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
